--- a/tmpl/postform.html
+++ b/tmpl/postform.html
@@ -1,6 +1,6 @@
 <div>
  <p>
-    <form action="/post" method="POST">
+    <form action="/post/" method="POST">
     <textarea name="postdata" cols="80" rows="10"></textarea><br>
     <input type="submit" value="Отправить">
     </form>
