--- a/static/index.html
+++ b/static/index.html
@@ -13,70 +13,35 @@
 
     <center style="font-size: 24px;"><a href="/reg/">Регистрация</a> <a href="/enter/">Вход</a></center>
     <div>
-        <table><td><img src="/static/iam>.png"</td>
-        <td>
-            <h1>Добрый день!</h1>
-            <p>
-                Этот сайт был сделан от бесделья и желания узнать
-                что такое go. А сейчас в условиях, когда всех поприжало,
-                может быть окажет мнен слежбу для поиска новой работы.
-            </p>
-            <p>
-                О себе. Я профессионально занимаюсь администрированием Unix/Linux/FreeBSD серверов,
-                сетей, включая всяечское сетевое обородувание с 2005 года.
-            </p>
-            <p>
-                Сначала перечислю что я сейчас занимаюсь и в чем бы хотел получить опыт.
-                Для начала из относительно свежих техноголий.
-            </p>
-            <ul>
-                <li>Docker</li>
-                <li<Kubernates</li>
-                <li>Jenkins</li>
-                <li>Golang</li>
-                <li>Puppet</li>
-                <li>Glusterfs</li>
-            </ul>
-            <p>
-                Это я знаю на уровне junior, и на этом примерно на этом построена эта система.
-                Мне хотелосьб бы полностью овладеть цепочкой CI/CD. ДЛя изучения применялся
-                исключительно инет. Тесты дома, на удаленных серверах, и Google Cloud</p>
+        <h1>Здравствуйте!</h1>
+        <p>
+            Этот сайт был сделан от безделья и желания узнать что такое go. А сейчас в условиях, когда всех поприжало, может быть окажет мне службу для поиска новой работы.
+            О себе. Я профессионально занимаюсь администрированием Unix/Linux/FreeBSD серверов, сетей, включая всяческое сетевое оборудование с 2005 года.
+            Сначала перечислю что я сейчас занимаюсь и в чем бы хотел получить опыт. Для начала из относительно свежих технологий.</p>
+        <li>Docker</li>
+        <li>kubernates</li>
+        <li>Jenkins</li>
+        <li>Golang</li>
+        <li>Puppet</li>
+        <li>Glusterfs</li>
+        </p>
+        Это я знаю на уровне junior, и на этом примерно на этом построена эта система. Мне хотелось бы полностью овладеть цепочкой CI/CD. Дkя изучения применялся исключительно инет. Тесты дома, на удаленных серверах, и Google Cloud
+        А теперь багаж с которым я работал за эти годы.</p>
 
-            <p>
-                А теперь багаж с которым я работал за эти годы.
-            </p>
-
-            <li>nginx+php-fpm в любых видах и формах, в виде клстеров,
-                в вид просто разных высоконагружнных серверов, включая хитрые махинации
-                с балансировкой нагрузки.<li>
-            <li>Так же балансировка как нагрузки так и отказоустойчивости с помощью CARP</li>
-            <li> Борьба с ддосами разных видов, и теми которые можно отбить простым shell-скриптом
-                и фаерволом, так и теми, которые уже требуют примениения стороних ресурсов в частности
-                Cloudflare</p>
-            <li>shell-скриптинг и автоматизация работы систем</p>
-            <li>Разворачивание NFS на группу серверов.</p>
-            <li>Поддержка пользователей на тему разнообразных вопросов</p>
-            <li>Постройка VPN соедитнений разного вида</p>
-            <li>VPS на базе OpenVZ, XEN, KVM c использованием таких пакетов как Proxmox, и тому подобных</li>
-            <li>Профилактиа серверов, вычищение мусора, оптимизация работы</li>
-            <li>Переносы серверов из одного или группы из одной страны в другую</p>
-            <li>Mysql, без репликации и с<p>
-            <li>Ну и че уж тут писать, много чего было, сети на FreeBSD, Apache, PHP, DNS(bind), Squid,
-                3proxy, борьба с ворохом панелек и CMS, начинапя wordpress кончая bitrix, панельек от Vesta
-                кончая ISPManager и VDSManager, бекапы скриптами и многое многое другое, что всего и не вспомнишь.</p>
-
-                <p>
-                    Если вы заинетересовались - моя почта alexey dot shushik.net, скайп ashushik1024. Работа устраивает только
-                    удаленная, особенно в текущей ситуации. И вообще, за последние пять лет удаленной работы, к другой я не привык.
-                    Готов на ночные смены и переработки, но с грамотным подходом к ситуации. </p>
-
-                <p>
-                    Спасибо за внимание!
-                </p>
-
-        </td>
-
-        </table>
+        <li>x+php-fpm в любых видах и формах, в виде кластеров, в вид просто разных высоконагруженных серверов, включая хитрые махинации с балансировкой нагрузки.</li>
+        <li>Так же балансировка как нагрузки так и отказоустойчивости с помощью CARP.</li>
+        <li>Борьба с ддосами разных видов, и теми которые можно отбить простым shell-скриптом и фаерволом, так и теми, которые уже требуют применения сторонних ресурсов в частности Cloudflare</li>
+        <li>shell-скриптинг и автоматизация работы систем</li>
+        <li>Разворачивание NFS на группу серверов.</li>
+        <li>Поддержка пользователей на тему разнообразных вопросов</li>
+        <li>Постройка VPN соедитнений разного вида</li>
+        <li>• VPS на базе OpenVZ, XEN, KVM c использованием таких пакетов как Proxmox, и тому подобных</li>
+        <li>Профилактиа серверов, вычищение мусора, оптимизация работы</li>
+        <li> Переносы серверов из одного или группы из одной страны в другую</li>
+        <li>Mysql, без репликации и с.</li>
+        <li> Ну и че уж тут писать, много чего было, сети на FreeBSD, Apache, PHP, DNS(bind), Squid, 3proxy, борьба с ворохом панелек и CMS, начиная wordpress кончая bitrix, панелек от Vesta кончая ISPManager и VDSManager, бекапы скриптами и многое другое, что всего и не вспомнишь.</li>
+        <p>Если вы заинтересовались - моя почта alexey dot shushik.net, скайп ashushik1024. Работа устраивает только удаленная, особенно в текущей ситуации. И вообще, за последние пять лет удаленной работы, к другой я не привык. Готов на ночные смены и переработки, но с грамотным подходом к ситуации.</p>
+        <p>Спасибо за внимание!</p>
 
     </div>
 </div>
