--- a/static/index.html
+++ b/static/index.html
@@ -28,16 +28,16 @@
         Это я знаю на уровне junior, и на этом примерно на этом построена эта система. Мне хотелось бы полностью овладеть цепочкой CI/CD. Дkя изучения применялся исключительно инет. Тесты дома, на удаленных серверах, и Google Cloud
         А теперь багаж с которым я работал за эти годы.</p>
 
-        <li>x+php-fpm в любых видах и формах, в виде кластеров, в вид просто разных высоконагруженных серверов, включая хитрые махинации с балансировкой нагрузки.</li>
+        <li>nginxx+php-fpm в любых видах и формах, в виде кластеров, в вид просто разных высоконагруженных серверов, включая хитрые махинации с балансировкой нагрузки.</li>
         <li>Так же балансировка как нагрузки так и отказоустойчивости с помощью CARP.</li>
         <li>Борьба с ддосами разных видов, и теми которые можно отбить простым shell-скриптом и фаерволом, так и теми, которые уже требуют применения сторонних ресурсов в частности Cloudflare</li>
         <li>shell-скриптинг и автоматизация работы систем</li>
         <li>Разворачивание NFS на группу серверов.</li>
         <li>Поддержка пользователей на тему разнообразных вопросов</li>
         <li>Постройка VPN соедитнений разного вида</li>
-        <li>• VPS на базе OpenVZ, XEN, KVM c использованием таких пакетов как Proxmox, и тому подобных</li>
+        <li>VPS на базе OpenVZ, XEN, KVM c использованием таких пакетов как Proxmox, и тому подобных</li>
         <li>Профилактиа серверов, вычищение мусора, оптимизация работы</li>
-        <li> Переносы серверов из одного или группы из одной страны в другую</li>
+        <li>Переносы серверов из одного или группы из одной страны в другую</li>
         <li>Mysql, без репликации и с.</li>
         <li> Ну и че уж тут писать, много чего было, сети на FreeBSD, Apache, PHP, DNS(bind), Squid, 3proxy, борьба с ворохом панелек и CMS, начиная wordpress кончая bitrix, панелек от Vesta кончая ISPManager и VDSManager, бекапы скриптами и многое другое, что всего и не вспомнишь.</li>
         <p>Если вы заинтересовались - моя почта alexey dot shushik.net, скайп ashushik1024. Работа устраивает только удаленная, особенно в текущей ситуации. И вообще, за последние пять лет удаленной работы, к другой я не привык. Готов на ночные смены и переработки, но с грамотным подходом к ситуации.</p>
