--- a/static/reg/index.html
+++ b/static/reg/index.html
@@ -19,7 +19,8 @@ head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <p>
     <form action="/regproc/" method="POST">
     <table>
-        <tr><td>Введите ваш email:</td><td><input type="text" name="login"></td></tr>
+        <tr><td>Введите ваш логин:</td><td><input type="text" name="login"></td></tr>
+        <tr><td>Введите ваш invite:</td><td><input type="text" name="invite"></td></tr>
         <tr><td>Введите ваше имя:</td><td><input type="text" name="fname"></td></tr>
         <tr><td>Введите вашe фамилию:</td><td><input type="text" name="sname"></td></tr>
         <tr><td>Введите ваш пароль:</td><td><input type="password" name="password"></td></tr>
