--- a/static/enter/index.html
+++ b/static/enter/index.html
@@ -14,7 +14,7 @@
 <div>
         <form action="/sign/" method="POST">
     <table>
-        <tr><td>Введите ваш email:</td><td><input type="text" name="login"></td></tr>
+        <tr><td>Введите ваш логин:</td><td><input type="text" name="login"></td></tr>
         <tr><td>Введите ваш пароль:</td><td><input type="password" name="password"></td></tr>
     </table>
             <input type="submit" value="Проходим в порядке очереди.">
