--- a/static/reg/index.html
+++ b/static/reg/index.html
@@ -15,7 +15,7 @@ head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <div>
         <p>Никаких воротничков, никаких галстчуков. Никакой политики, нецензурная лексика только в том случае, если
         из песни слов не выкинешь, никакой порнографии. Все по делу.</p>
-    <p>В именах и паролях можно использовать только буквы и цывры, никаких специальных симовол!!!!!!!</p>
+    <p>В именах и паролях можно использовать только буквы и цифры, никаких специальных симовол!!!!!!!</p>
 <p>
     <form action="/regproc/" method="POST">
     <table>
