--- a/static/enter/index.html
+++ b/static/enter/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru-RU">
 <head>
-    <title>work.shushik.net</title>
+    <title>serenity.net.org</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=830, initial-scale=1">
     <link href="/static/style.css" rel="stylesheet" type="text/css">
