--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -2,8 +2,17 @@
     <!DOCTYPE html>
     <html lang="ru-RU">
     <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163150276-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-163150276-1');
+        </script>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>serenity-org.net</title>
+        <title>serenity-net.org</title>
         <meta name="viewport" content="width=830, initial-scale=1">
         <link href="/static/style.css" rel="stylesheet" type="text/css">
     </head>
