--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
     <center style="font-size: 24px;"><a href="/reg/">Регистрация</a> <a href="/enter/">Вход</a></center>
     <div>
         <h1>Здравствуйте!</h1>
-<iframe width="1280" height="720" src="https://www.youtube.com/embed/MIsj1ehlVnk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="520" src="https://www.youtube.com/embed/MIsj1ehlVnk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
 <div>
